--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
   <properties>
     <slf4j.version>1.7.33</slf4j.version>
+    <log4j.version>2.22.0</log4j.version>
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
     <compilerArgs>
@@ -26,10 +27,25 @@
         <artifactId>slf4j-api</artifactId>
         <version>${slf4j.version}</version>
       </dependency>
+
+      <!-- Log4j to SLF4J Adapter -->
       <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-simple</artifactId>
-        <version>${slf4j.version}</version>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-slf4j-impl</artifactId>
+        <version>${log4j.version}</version>
+      </dependency>
+      <!-- Log4j Core -->
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>${log4j.version}</version>
+      </dependency>
+
+      <!-- Log4j API -->
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+        <version>${log4j.version}</version>
       </dependency>
 
       <!--cmd-->
@@ -39,9 +55,16 @@
         <version>1.6.0</version>
       </dependency>
 
+      <!-- JUnit -->
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>5.7.0</version>
+        <scope>test</scope>
+      </dependency>
     </dependencies>
-
   </dependencyManagement>
+
   <dependencies>
     <!--Jersey-->
     <dependency>
@@ -72,12 +95,6 @@
       <artifactId>commons-cli</artifactId>
     </dependency>
 
-    <!--LOG-->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-    </dependency>
-
     <!--JSON-->
     <dependency>
       <groupId>org.json</groupId>
@@ -85,6 +102,26 @@
       <version>20231013</version>
     </dependency>
 
+    <!-- SLF4J and Log4j Dependencies -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j-impl</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+    </dependency>
 
   </dependencies>
 
