--- a/pom.xml
+++ b/pom.xml
@@ -21,19 +21,20 @@
 
   <dependencyManagement>
     <dependencies>
-      <!--logs-->
+      <!-- SLF4J API -->
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>${slf4j.version}</version>
       </dependency>
 
-      <!-- Log4j to SLF4J Adapter -->
+      <!-- Log4j SLF4J Implementation -->
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-slf4j-impl</artifactId>
         <version>${log4j.version}</version>
       </dependency>
+
       <!-- Log4j Core -->
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
@@ -48,61 +49,75 @@
         <version>${log4j.version}</version>
       </dependency>
 
-      <!--cmd-->
+      <!-- Commons CLI -->
       <dependency>
         <groupId>commons-cli</groupId>
         <artifactId>commons-cli</artifactId>
         <version>1.6.0</version>
       </dependency>
 
-      <!-- JUnit -->
+      <!-- JUnit Jupiter Engine -->
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-engine</artifactId>
         <version>5.7.0</version>
         <scope>test</scope>
       </dependency>
+
+      <!-- Mockito Core -->
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
         <version>5.7.0</version>
         <scope>test</scope>
       </dependency>
-    </dependencies>
 
+      <!-- Guava -->
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>31.0.1-jre</version>
+      </dependency>
+
+      <!-- Groovy -->
+      <dependency>
+        <groupId>org.codehaus.groovy</groupId>
+        <artifactId>groovy</artifactId>
+        <version>3.0.9</version>
+      </dependency>
+    </dependencies>
   </dependencyManagement>
 
   <dependencies>
-    <!--Jersey-->
+    <!-- Jersey Server -->
     <dependency>
       <groupId>org.glassfish.jersey.core</groupId>
       <artifactId>jersey-server</artifactId>
       <version>3.1.3</version>
     </dependency>
+
+    <!-- Jersey Container Servlet -->
     <dependency>
       <groupId>org.glassfish.jersey.containers</groupId>
       <artifactId>jersey-container-servlet</artifactId>
       <version>3.1.3</version>
     </dependency>
 
+    <!-- Jakarta Activation API -->
     <dependency>
       <groupId>jakarta.activation</groupId>
       <artifactId>jakarta.activation-api</artifactId>
       <version>2.0.1</version>
     </dependency>
+
+    <!-- Jersey HK2 -->
     <dependency>
       <groupId>org.glassfish.jersey.inject</groupId>
       <artifactId>jersey-hk2</artifactId>
       <version>3.1.3</version>
     </dependency>
 
-    <!--cmd-->
-    <dependency>
-      <groupId>commons-cli</groupId>
-      <artifactId>commons-cli</artifactId>
-    </dependency>
-
-    <!--JSON-->
+    <!-- JSON -->
     <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
@@ -139,6 +154,17 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy</artifactId>
+    </dependency>
+
+    <!-- Commons CLI -->
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
     </dependency>
   </dependencies>
 
