--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,14 @@
       <version>3.1.3</version>
     </dependency>
 
+    <!-- Jersey Core Client -->
+    <dependency>
+      <groupId>org.glassfish.jersey.core</groupId>
+      <artifactId>jersey-client</artifactId>
+      <version>3.1.3</version>
+    </dependency>
+
+
     <!-- Jersey Container Servlet -->
     <dependency>
       <groupId>org.glassfish.jersey.containers</groupId>
@@ -114,6 +122,18 @@
     <dependency>
       <groupId>org.glassfish.jersey.inject</groupId>
       <artifactId>jersey-hk2</artifactId>
+      <version>3.1.3</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.glassfish.jersey.connectors</groupId>
+      <artifactId>jersey-jnh-connector</artifactId>
+      <version>3.1.3</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.glassfish.jersey.connectors</groupId>
+      <artifactId>jersey-apache5-connector</artifactId>
       <version>3.1.3</version>
     </dependency>
 
@@ -165,6 +185,11 @@
     <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.13</version>
     </dependency>
   </dependencies>
 
